Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-13911

[SHELL32] regression of r72808 - explorer file-browser leaks one "user object" per directory change

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.7
    • Shell
    • 72,808

    Description

      ros gcc dbg
      When browsing with explorers file-browser, we leak one "user object" (observable via column in taskmgr) whenever we change a directory.
      Those accumulate over time and never get freed.

      [SHELL32] r72808 is the guilty rev.
      see UserObjectLeakRegressionTest.txt

      Attachments

        Activity

          People

            bug zilla Bug Zilla
            reactosfanboy reactosfanboy
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: