[SHELL32] CDefView: Fix a leak of an HMENU. This fix is thanks to Joachim Henze who found the bug and quickly found the guilty revision. CORE-13911